final project - usercontext 2/2

--- a/final-project/src/Components/Forms/Input.module.css
+++ b/final-project/src/Components/Forms/Input.module.css
@@ -17,7 +17,7 @@
 .input:hover {
   outline: none;
   border-color: #fb1;
-  background: #fff;
+  background: white;
   box-shadow: 0 0 0 3px #fea;
 }
 
