--- a/final-project/src/Components/Header.module.css
+++ b/final-project/src/Components/Header.module.css
@@ -3,8 +3,8 @@
   position: fixed;
   width: 100%;
   z-index: 100;
-  background: #fff;
-  top: 0;
+  background: white;
+  top: 0px;
 }
 
 .nav {
@@ -20,15 +20,17 @@
 
 .login {
   color: #333;
+  display: flex;
+  align-items: center;
 }
 
 .login::after {
-  content: "";
+  content: '';
   display: inline-block;
   width: 14px;
   height: 17px;
-  background: url("../Assets/usuario.svg") no-repeat center center;
+  background: url('../Assets/usuario.svg') no-repeat center center;
   margin-left: 0.5rem;
   position: relative;
-  top: 1px;
+  top: -1px;
 }
