fintech - venda router

--- a/react-typescript/fintech/src/style.css
+++ b/react-typescript/fintech/src/style.css
@@ -131,6 +131,12 @@ ul {
   color: var(--color-1);
 }
 
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 /* Venda  */
 
 .venda {
